Table users
{
    id int [pk, increment]
    username varchar(100) [unique]
    password_hash varchar(255) [not null]
    postal_code varchar(20) [not null]
    balance decimal(18, 2) [default: 0.00]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table business_customers {
    user_id int [ref: - users.id]
    cvr varchar(20) [not null]
    credit decimal(18, 2) [default: 0.00]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table private_customers {
    user_id int [ref: - users.id]
    cpr varchar(20) [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

enum FuelType {
    Petrol
    Diesel
    Electric
    Hydrogen
}

enum LicenceType {
    A
    B
    C
    D
    BE
    CE
    DE
}

Table vehicles
{
    id int [pk, increment]
    name varchar(255) [not null]
    kilometers double [not null]
    release_year int [not null]
    registration_number varchar(10) [not null, unique]
    base_price decimal(18, 2) [not null]
    tow_bar bool [not null]
    engine_size double [not null]
    km_per_liter double [not null]
    licence_type LicenceType [not null]
    fuel_type FuelType [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table heavy_vehicles {
    id int [pk, increment]
    vehicles_id int [ref: - vehicles.id]
    weight double [not null]
    height double [not null]
    length double [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table semi_trucks {
    heavy_vehicle_id int [ref: - heavy_vehicles.id]
    cargo_capacity double [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table buses {
    heavy_vehicle_id int [ref: - heavy_vehicles.id]
    seat_count int [not null]
    bed_count int [not null]
    toilet bool [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table personal_cars {
    id int [pk, increment]
    vehicles_id int [ref: - vehicles.id]
    seat_count int [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table business_personal_cars {
    car_id int [ref: - personal_cars.id]
    cargo_capacity double [not null]
    roll_cage bool [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table private_personal_cars {
    car_id int [ref: - personal_cars.id]
    isofix bool [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table auctions
{
    id int [pk, increment]
    seller int [ref: > users.id]
    vehicles_id int [ref: - vehicles.id]
    minimum_price double [not null]
    end_time timestamptz [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table bids {
    id int [pk, increment]
    bidder_id int [ref: > users.id]
    auction_id int [ref: > auctions.id]
    amount double [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}
